equistore-core/include/equistore.h

/**
 * Status code used when a function succeeded
 */
#define EQS_SUCCESS 0
/**
 * Status code used when a function got an invalid parameter
 */
#define EQS_INVALID_PARAMETER_ERROR 1
/**
 * Status code indicating I/O error when loading/writing `eqs_tensormap_t` to a file
 */
#define EQS_IO_ERROR 2
/**
 * Status code indicating errors in the serialization format when
 * loading/writing `eqs_tensormap_t` to a file
 */
#define EQS_SERIALIZATION_ERROR 3
/**
 * Status code used when a memory buffer is too small to fit the requested data
 */
#define EQS_BUFFER_SIZE_ERROR 254
/**
 * Status code used when there was an internal error, i.e. there is a bug
 * inside equistore itself
 */
#define EQS_INTERNAL_ERROR 255
/**
 * Basic building block for tensor map. A single block contains a n-dimensional
 * `eqs_array_t`, and n sets of `eqs_labels_t` (one for each dimension).
 *
 * A block can also contain gradients of the values with respect to a variety
 * of parameters. In this case, each gradient has a separate set of sample
 * and component labels but share the property labels with the values.
 */
typedef struct eqs_block_t eqs_block_t;
/**
 * Opaque type representing a `TensorMap`.
 */
typedef struct eqs_tensormap_t eqs_tensormap_t;
/**
 * Status type returned by all functions in the C API.
 *
 * The value 0 (`EQS_SUCCESS`) is used to indicate successful operations,
 * positive values are used by this library to indicate errors, while negative
 * values are reserved for users of this library to indicate their own errors
 * in callbacks.
 */
typedef int32_t eqs_status_t;
/**
 * A set of labels used to carry metadata associated with a tensor map.
 *
 * This is similar to a list of `count` named tuples, but stored as a 2D array
 * of shape `(count, size)`, with a set of names associated with the columns of
 * this array (often called *dimensions*). Each row/entry in this array is
 * unique, and they are often (but not always) sorted in lexicographic order.
 *
 * `eqs_labels_t` with a non-NULL `internal_ptr_` correspond to a
 * reference-counted Rust data structure, which allow for fast lookup inside
 * the labels with `eqs_labels_positions`.
 */
typedef struct eqs_labels_t {
  /**
   * internal: pointer to the rust `Labels` struct if any, null otherwise
   */
  void *internal_ptr_;
  /**
   * Names of the dimensions composing this set of labels. There are `size`
   * elements in this array, each being a NULL terminated UTF-8 string.
   */
  const char *const *names;
  /**
   * Pointer to the first element of a 2D row-major array of 32-bit signed
   * integer containing the values taken by the different dimensions in
   * `names`. Each row has `size` elements, and there are `count` rows in
   * total.
   */
  const int32_t *values;
  /**
   * Number of dimensions/size of a single entry in the set of labels
   */
  uintptr_t size;
  /**
   * Number entries in the set of labels
   */
  uintptr_t count;
} eqs_labels_t;
/**
 * A single 64-bit integer representing a data origin (numpy ndarray, rust
 * ndarray, torch tensor, fortran array, ...).
 */
typedef uint64_t eqs_data_origin_t;
/**
 * Representation of a single sample moved from an array to another one
 */
typedef struct eqs_sample_mapping_t {
  /**
   * index of the moved sample in the input array
   */
  uintptr_t input;
  /**
   * index of the moved sample in the output array
   */
  uintptr_t output;
} eqs_sample_mapping_t;
/**
 * `eqs_array_t` manages n-dimensional arrays used as data in a block or tensor
 * map. The array itself if opaque to this library and can come from multiple
 * sources: Rust program, a C/C++ program, a Fortran program, Python with numpy
 * or torch. The data does not have to live on CPU, or even on the same machine
 * where this code is executed.
 *
 * This struct contains a C-compatible manual implementation of a virtual table
 * (vtable, i.e. trait in Rust, pure virtual class in C++); allowing
 * manipulation of the array in an opaque way.
 *
 * **WARNING**: all function implementations **MUST** be thread-safe, and can
 * be called from multiple threads at the same time. The `eqs_array_t` itself
 * might be moved from one thread to another.
 */
typedef struct eqs_array_t {
  /**
   * User-provided data should be stored here, it will be passed as the
   * first parameter to all function pointers below.
   */
  void *ptr;
  /**
   * This function needs to store the "data origin" for this array in
   * `origin`. Users of `eqs_array_t` should register a single data
   * origin with `eqs_register_data_origin`, and use it for all compatible
   * arrays.
   */
  eqs_status_t (*origin)(const void *array, eqs_data_origin_t *origin);
  /**
   * Get a pointer to the underlying data storage.
   *
   * This function is allowed to fail if the data is not accessible in RAM,
   * not stored as 64-bit floating point values, or not stored as a
   * C-contiguous array.
   */
  eqs_status_t (*data)(void *array, double **data);
  /**
   * Get the shape of the array managed by this `eqs_array_t` in the `*shape`
   * pointer, and the number of dimension (size of the `*shape` array) in
   * `*shape_count`.
   */
  eqs_status_t (*shape)(const void *array, const uintptr_t **shape, uintptr_t *shape_count);
  /**
   * Change the shape of the array managed by this `eqs_array_t` to the given
   * `shape`. `shape_count` must contain the number of elements in the
   * `shape` array
   */
  eqs_status_t (*reshape)(void *array, const uintptr_t *shape, uintptr_t shape_count);
  /**
   * Swap the axes `axis_1` and `axis_2` in this `array`.
   */
  eqs_status_t (*swap_axes)(void *array, uintptr_t axis_1, uintptr_t axis_2);
  /**
   * Create a new array with the same options as the current one (data type,
   * data location, etc.) and the requested `shape`; and store it in
   * `new_array`. The number of elements in the `shape` array should be given
   * in `shape_count`.
   *
   * The new array should be filled with zeros.
   */
  eqs_status_t (*create)(const void *array,
                         const uintptr_t *shape,
                         uintptr_t shape_count,
                         struct eqs_array_t *new_array);
  /**
   * Make a copy of this `array` and return the new array in `new_array`.
   *
   * The new array is expected to have the same data origin and parameters
   * (data type, data location, etc.)
   */
  eqs_status_t (*copy)(const void *array, struct eqs_array_t *new_array);
  /**
   * Remove this array and free the associated memory. This function can be
   * set to `NULL` is there is no memory management to do.
   */
  void (*destroy)(void *array);
  /**
   * Set entries in the `output` array (the current array) taking data from
   * the `input` array. The `output` array is guaranteed to be created by
   * calling `eqs_array_t::create` with one of the arrays in the same block
   * or tensor map as the `input`.
   *
   * The `samples` array of size `samples_count` indicate where the data
   * should be moved from `input` to `output`.
   *
   * This function should copy data from `input[samples[i].input, ..., :]` to
   * `array[samples[i].output, ..., property_start:property_end]` for `i` up
   * to `samples_count`. All indexes are 0-based.
   */
  eqs_status_t (*move_samples_from)(void *output,
                                    const void *input,
                                    const struct eqs_sample_mapping_t *samples,
                                    uintptr_t samples_count,
                                    uintptr_t property_start,
                                    uintptr_t property_end);
} eqs_array_t;